--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <h1>🌿 Our Official Links</h1>
 
-<a class="button paypal" href="https://paypal.me/ibra7m" target="_blank"><i class="fa-brands fa-paypal"></i> PayPal Support</a>
+<a class="button paypal" href="https://www.paypal.com/paypalme/ibra7m" target="_blank"><i class="fa-brands fa-paypal"></i> PayPal Support</a>
 <a class="button usdt" href="https://ibb.co/TB81166s" target="_blank"><i class="fa-solid fa-dollar-sign"></i> USDT Support</a>
 <a class="button whatsapp" href="https://wa.me/972592596213" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp Contact</a>
 
